feat(packages): expo-modules build

--- a/nx.json
+++ b/nx.json
@@ -8,9 +8,13 @@
       }
     }
   },
+  "npmScope": "universal-labs",
+  "cli": {
+    "packageManager": "yarn"
+  },
   "targetDefaults": {
     "build": {
-      "dependsOn": ["^build","^build:native"]
+      "dependsOn": ["^build"]
     }
   }
 }
