--- a/packages/sheets/tsconfig.build.json
+++ b/packages/sheets/tsconfig.build.json
@@ -1,20 +1,8 @@
 {
-  "extends": "../../tsconfig.base",
+  "extends": "expo-module-scripts/tsconfig.base",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "importsNotUsedAsValues": "error",
-    "declarationMap": false,
-    "sourceMap": false,
-    "noImplicitAny": false,
-    "emitDeclarationOnly": true,
-    "outDir": "./build",
-    "jsx": "react-jsx",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "noEmit": false,
-    "strict": true,
-    "target": "esnext"
+    "outDir": "./build"
   },
-  "include": ["src", "env.d.ts"],
-  "exclude": ["build"]
+  "include": ["./src", "env.d.ts"],
+  "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*"]
 }
