--- a/packages/hooks/tsconfig.build.json
+++ b/packages/hooks/tsconfig.build.json
@@ -1,18 +1,8 @@
 {
-  "extends": "../../tsconfig.base",
+  "extends": "expo-module-scripts/tsconfig.base",
   "compilerOptions": {
-    "outDir": "./build",
-    "rootDir": "./src",
-    "emitDeclarationOnly": true,
-    "declarationMap": false,
-    "jsx": "react-jsx",
-    "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": false,
-    "module": "ESNext",
-    "types": ["node"],
-    "importHelpers": true
+    "outDir": "./build"
   },
-  "include": ["src"],
-  "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*", "**/build/*"]
+  "include": ["./src", "env.d.ts"],
+  "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*"]
 }
