--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -46,8 +46,11 @@
     "build": "expo-module build -p tsconfig.build.json",
     "build:native": "vite build -c vite.native.config.ts",
     "build:vite": "vite build && yarn build:native && npx tsc -p tsconfig.build.json",
+    "clean": "expo-module clean",
     "dev": "yarn build",
+    "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
+    "prepublishOnly": "expo-module prepublishOnly",
     "test": "vitest run",
     "test:ui": "vitest --ui"
   },
