--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -41,9 +41,12 @@
   "scripts": {
     "build": "npx vite build",
     "build:ts": "expo-module build -p tsconfig.build.json",
+    "clean": "expo-module clean",
     "dev": "yarn vite build -w",
     "e2e": "cypress open",
+    "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
+    "prepublishOnly": "expo-module prepublishOnly",
     "test": "vitest run",
     "test:ui": "yarn vitest --ui"
   },
