--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-universal/tailwind",
+    "url": "git+https://github.com/react-universal/tailwind",
     "directory": "packages/primitives"
   },
   "license": "MIT",
@@ -43,10 +43,11 @@
   ],
   "scripts": {
     "build": "expo-module build -p tsconfig.build.json",
-    "build:native": "npx vite build -c vite.native.config.ts",
-    "build:vite": "npx vite build && yarn build:native && npx tsc -p tsconfig.build.json",
+    "clean": "expo-module clean",
     "dev": "yarn vite build -w --force",
+    "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
+    "prepublishOnly": "expo-module prepublishOnly",
     "test": "vitest run",
     "test:ui": "yarn vitest --ui"
   },
