feat(packages): expo-modules build

--- a/nx.json
+++ b/nx.json
@@ -8,13 +8,12 @@
       }
     }
   },
-  "npmScope": "universal-labs",
   "cli": {
     "packageManager": "yarn"
   },
   "targetDefaults": {
     "build": {
-      "dependsOn": ["^clean", "^build"]
+      "dependsOn": ["^build", "^clean"]
     }
   }
 }
