--- a/nx.json
+++ b/nx.json
@@ -13,7 +13,7 @@
   },
   "targetDefaults": {
     "build": {
-      "dependsOn": ["^build", "^clean"]
+      "dependsOn": ["clean", "^build"]
     }
   }
 }
