--- a/apps/docs-page/package.json
+++ b/apps/docs-page/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
