--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -61,6 +61,5 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./build/index.native.es.js"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
 }
