feat(build): release libs config (#44)
* feat(packages): expo-modules build

* feat(packages): expo-modules build

* feat(packages): expo-modules build

* feat(packages): expo-modules build

* feat(packages): expo-modules build

* feat(packages): expo-modules build

* feat(packages): expo-modules exports

* feat(packages): expo-modules exports

* feat(packages): expo-modules exports for native

* feat(packages): expo-modules exports for native

--- a/nx.json
+++ b/nx.json
@@ -8,9 +8,12 @@
       }
     }
   },
+  "cli": {
+    "packageManager": "yarn"
+  },
   "targetDefaults": {
     "build": {
-      "dependsOn": ["^build","^build:native"]
+      "dependsOn": ["clean", "^build"]
     }
   }
 }
