--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -22,15 +22,8 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "exports": {
-    ".": {
-      "import": "./build/index.es.js",
-      "require": "./build/index.umd.js"
-    },
-    "./package.json": "./package.json"
-  },
-  "main": "./build/index.umd.js",
-  "module": "./build/index.es.js",
+  "main": "./build/index.js",
+  "module": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
     "build",
@@ -39,8 +32,9 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "npx vite build && yarn build:native && npx tsc -p tsconfig.build.json",
+    "build": "expo-module build -p tsconfig.build.json",
     "build:native": "npx vite build -c vite.native.config.ts",
+    "clean": "expo-module clean",
     "dev": "yarn build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "vitest run",
@@ -60,6 +54,5 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./build/index.native.es.js"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
 }
