--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@universal-labs/tailwind-ui",
   "version": "1.5.1",
+  "private": true,
   "description": "Tailwind UI replica for react native",
   "keywords": [
     "react-native",
