--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
-    "@nrwl/devkit": "^15.8.7",
-    "@nrwl/eslint-plugin-nx": "^15.8.7",
+    "@nrwl/devkit": "15.8.7",
+    "@nrwl/eslint-plugin-nx": "15.8.7",
+    "@nrwl/linter": "15.8.7",
     "@nrwl/nx-cloud": "latest",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -64,7 +65,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "expo-module-scripts": "^3.0.7",
-    "nx": "^15.8.7",
+    "nx": "15.8.7",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tslib": "^2.3.0",
