--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "build": "npx vite build && yarn build:tailwind",
     "build:tailwind": "npx vite build -c vite.tailwind.config.ts",
-    "dev": "npx vite build -w",
+    "dev": "concurrently \"npx vite build -w\" \"npx vite build -c vite.tailwind.config.ts -w\"",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "vitest run",
     "test:ui": "vitest --ui"
