feat(stylesheets): experimental support for other props

--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -57,6 +57,5 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./src/index.ts"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
 }
