feat(styled props): Build style props (#51)
* feat(stylesheets): style props support

* feat(stylesheets): experimental support for other props

* feat(stylesheets): experimental support for other props

* feat(stylesheets): experimental support for other props

--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "build": "expo-module build -p tsconfig.build.json",
     "clean": "expo-module clean",
-    "dev": "yarn vite build -w --force",
+    "dev": "expo-module build -p tsconfig.build.json -w",
     "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepublishOnly": "expo-module prepublishOnly",
