--- a/packages/primitives/tsconfig.json
+++ b/packages/primitives/tsconfig.json
@@ -3,13 +3,10 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "declarationMap": false,
-    "emitDeclarationOnly": true,
-    "declarationDir": "./build",
-    "lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
     "noImplicitAny": true,
     "types": ["vitest/globals"],
     "outDir": "./build",
-    "noEmit": false,
+    "noEmit": true,
     "noUnusedLocals": true,
     "jsx": "react-jsx",
     "module": "ES6",
