--- a/packages/sheets/tsconfig.build.json
+++ b/packages/sheets/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
   "extends": "expo-module-scripts/tsconfig.base",
   "compilerOptions": {
-    "outDir": "./build"
+    "outDir": "./build",
+    "types": ["node"]
   },
   "include": ["./src", "env.d.ts"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*"]
