--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -26,7 +26,7 @@
   "sideEffects": false,
   "main": "./build/index.js",
   "module": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "types": "./src/index.ts",
   "files": [
     "build",
     "env.d.ts",
