--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,9 @@
     },
     "dev": {
       "dependsOn": ["^build:libs"]
+    },
+    "build:libs": {
+      "dependsOn": ["^build:libs"]
     }
   },
   "namedInputs": {
