feat(styled): declararions

--- a/packages/primitives/tsconfig.build.json
+++ b/packages/primitives/tsconfig.build.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "./build",
     "strict": true,
-    "declaration": true,
+    "declaration": false,
     "declarationMap": false,
     "jsx": "react-native"
   },
