fix(core): types updated

--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "../../tsconfig.base",
   "compilerOptions": {
-    "jsx": "react-jsx",
+    "jsx": "react-native",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
-    "module": "ESNext",
+    "module": "CommonJS",
     "noEmit": true,
     "outDir": "./build",
     "types": ["node", "vitest/globals"],
