--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.1.6",
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
+    "@types/react-native": "^0.71.5",
     "babel-plugin-module-resolver": "^5.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
