--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -45,7 +45,7 @@
   "devDependencies": {
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
-    "@types/react-native": "0.70.7",
+    "@types/react-native": "^0.71.5",
     "@universal-labs/styled": "workspace:*",
     "react-native": "0.71.4"
   },
