--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -48,10 +48,12 @@
   },
   "devDependencies": {
     "@types/node": "16.11.7",
-    "@types/react": "~18.0.27",
+    "@types/react": "18.0.28",
     "@types/react-dom": "~18.0.10",
     "@types/react-is": "^17.0.3",
-    "@types/react-native": "0.70.7",
+    "@types/react-native": "^0.71.5",
+    "react": "18.2.0",
+    "react-native": "0.71.4",
     "vitest-react-native": "0.0.5"
   },
   "peerDependencies": {
