--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -26,7 +26,7 @@
   "sideEffects": false,
   "main": "./build/index.js",
   "module": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "types": "./src/index.ts",
   "files": [
     "build",
     "env.d.ts",
@@ -35,20 +35,19 @@
     "README.md"
   ],
   "scripts": {
-    "build": "expo-module build -p tsconfig.build.json",
+    "build:libs": "expo-module build -p tsconfig.build.json",
     "clean": "expo-module clean",
     "dev": "expo-module build -p tsconfig.build.json -w",
-    "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "prepublishOnly": "expo-module prepublishOnly",
     "test": "vitest run",
     "test:ui": "yarn vitest --ui"
   },
   "devDependencies": {
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
-    "@types/react-native": "0.70.7",
-    "@universal-labs/styled": "workspace:*"
+    "@types/react-native": "^0.71.5",
+    "@universal-labs/styled": "workspace:*",
+    "react-native": "0.71.4"
   },
   "peerDependencies": {
     "react-native-web": ">= 0.18.10"
