--- a/packages/primitives/tsconfig.build.json
+++ b/packages/primitives/tsconfig.build.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "outDir": "./build",
     "strict": true,
-    "jsx": "react-jsx"
+    "declaration": false,
+    "declarationMap": false,
+    "jsx": "react-native"
   },
   "include": ["./src", "env.d.ts"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*"]
