--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -31,13 +31,14 @@
     "README.md"
   ],
   "scripts": {
-    "build": "expo-module build -p tsconfig.build.json",
+    "build:libs": "expo-module build -p tsconfig.build.json",
     "clean": "expo-module clean",
     "dev": "expo-module build -p tsconfig.build.json -w",
     "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepublishOnly": "expo-module prepublishOnly",
     "test": "vitest run",
+    "test:native": "vitest run",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
@@ -47,10 +48,13 @@
   },
   "devDependencies": {
     "@types/node": "16.11.7",
-    "@types/react": "~18.0.27",
+    "@types/react": "18.0.28",
     "@types/react-dom": "~18.0.10",
     "@types/react-is": "^17.0.3",
-    "@types/react-native": "0.70.7"
+    "@types/react-native": "^0.71.5",
+    "react": "18.2.0",
+    "react-native": "0.71.4",
+    "vitest-react-native": "0.0.5"
   },
   "peerDependencies": {
     "react-native-web": ">= 0.18.10"
