--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "extends": "../../tsconfig.base",
   "compilerOptions": {
-    "jsx": "react-jsx",
+    "jsx": "react-native",
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": false,
-    "noUnusedLocals": false,
-    "module": "ESNext",
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "module": "CommonJS",
     "noEmit": true,
-    "declarationMap": false,
     "outDir": "./build",
     "types": ["node", "vitest/globals"],
     "importHelpers": true
