--- a/apps/docusaurus/package.json
+++ b/apps/docusaurus/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.0"
+    "@docusaurus/module-type-aliases": "2.4.0",
+    "@tsconfig/docusaurus": "1.0.7"
   },
   "engines": {
     "node": ">=16.14"
