--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -16,6 +16,7 @@
     "@universal-labs/core": "workspace:*",
     "@universal-labs/primitives": "workspace:*",
     "expo": "^48.0.0",
+    "expo-font": "11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
