--- a/examples/expo-app/app.json
+++ b/examples/expo-app/app.json
@@ -3,7 +3,7 @@
     "name": "expo-app",
     "slug": "expo-app",
     "version": "1.0.0",
-    "jsEngine": "jsc",
+    "jsEngine": "hermes",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
@@ -19,6 +19,7 @@
       "**/*"
     ],
     "ios": {
+      "jsEngine": "jsc",
       "supportsTablet": true
     },
     "android": {
