--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "tslib": "^2.3.0",
     "typescript": "^4.9.4",
     "vite": "^4.1.1",
+    "vite-plugin-dts": "^2.2.0",
     "vitest": "^0.28.3"
   },
   "packageManager": "yarn@3.4.1"
