--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -35,9 +35,9 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "expo-module build -p tsconfig.build.json",
+    "build:libs": "vite build && vite build -c vite.config.native.ts",
     "clean": "expo-module clean",
-    "dev": "expo-module build -p tsconfig.build.json -w",
+    "dev": "yarn build:libs",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "vitest run",
     "test:ui": "yarn vitest --ui"
