--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "dev": "npx nx run-many --target=dev --projects=\"@universal-labs/**\" --parallel",
     "docs:build": "npx nx run build --project=docusaurus",
     "docs:dev": "npx nx run dev --project=docusaurus",
-    "expo:android": "npx nx run android --project=expo-app",
-    "expo:ios": "npx nx run ios --project=expo-app",
-    "expo:start": "npx nx run start --project=expo-app",
+    "expo:android": "yarn workspace expo-app run android",
+    "expo:ios": "yarn workspace expo-app run ios",
+    "expo:start": "yarn workspace expo-app run start",
     "format": "prettier --write packages apps examples \"**/*.{js,ts,tsx,md}\"",
     "libs:foreach": "yarn workspaces foreach --no-private --verbose",
     "lint": "npx nx run-many --target=lint --projects=\"@universal-labs/**\"",
@@ -72,6 +72,7 @@
     "tslib": "^2.3.0",
     "typescript": "^4.9.4",
     "vite": "^4.1.1",
+    "vite-plugin-dts": "^2.2.0",
     "vitest": "^0.28.3"
   },
   "packageManager": "yarn@3.4.1"
