--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -24,19 +24,16 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "import": "./build/index.js",
-      "require": "./build/index.js",
-      "types": "./build/index.d.ts"
+      "import": "./build/es/index.js",
+      "require": "./build/umd/index.js"
     },
     "./react-native": {
-      "import": "./react-native/index.js",
-      "require": "./react-native/index.js",
-      "types": "./react-native/index.d.ts"
-    },
-    "./package.json": "./package.json"
+      "default": "./react-native/index.js"
+    }
   },
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "./build/umd/index.web.js",
+  "module": "./build/es/index.web.js",
+  "types": "./build/typings/index.d.ts",
   "files": [
     "build",
     "env.d.ts",
@@ -46,9 +43,9 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "expo-module build -p tsconfig.build.json",
+    "build:libs": "vite build",
     "clean": "expo-module clean",
-    "dev": "expo-module build -p tsconfig.build.json -w",
+    "dev": "yarn build:libs -w",
     "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepublishOnly": "expo-module prepublishOnly",
@@ -58,7 +55,6 @@
   "dependencies": {
     "@universal-labs/core": "workspace:*",
     "css-to-react-native": "^3.1.0",
-    "immer": "^9.0.19",
     "react-native-uuid": "^2.0.1",
     "use-sync-external-store": "^1.2.0"
   },
@@ -74,5 +70,6 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
+  "react-native": "./build/es/index.js"
 }
