--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -22,8 +22,9 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "./build/umd/index.web.js",
+  "module": "./build/es/index.web.js",
+  "typings": "./build/typings/index.d.ts",
   "files": [
     "build",
     "LICENSE",
@@ -31,9 +32,9 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "expo-module build -p tsconfig.build.json",
+    "build:libs": "vite build",
     "clean": "expo-module clean",
-    "dev": "expo-module build -p tsconfig.build.json -w",
+    "dev": "yarn build:libs -w",
     "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepublishOnly": "expo-module prepublishOnly",
@@ -54,6 +55,7 @@
     "@types/react-native": "^0.71.5",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "vite-plugin-multiple": "0.2.0",
     "vitest-react-native": "0.0.5"
   },
   "peerDependencies": {
@@ -63,5 +65,6 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
+  "react-native": "./build/es/index.js"
 }
